examples/c/error-codes/undefined/UB-FD5-bad-static.output
UB-FD5-bad-static.c:4:1: error: 'main' must return 'int'
void main(void){
^~~~
int
1 error generated.
